--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "yarn openapi:yaml && yarn swagger",
+    "predev": "npm run openapi:yaml && npm run swagger",
     "dev": "next dev",
-    "prebuild": "yarn openapi:yaml && yarn swagger",
+    "prebuild": "npm run openapi:yaml && npm run swagger",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "openapi:yaml": "typeconv -f ts -t oapi --oapi-format yaml --output-extension 'swagger.yaml' --output-directory 'types/openapi' 'types/*.ts'",
-    "swagger": "yarn generate && next-swagger-doc-cli next-swagger-doc.json",
+    "swagger": "npm run generate && next-swagger-doc-cli next-swagger-doc.json",
     "generate": "npx tsx ./scripts/swaggerconfig.js"
   },
   "dependencies": {
@@ -23,8 +23,11 @@
     "csv-parse": "^5.3.6",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "ethers": "^5.7.2",
+    "ethers": "^6.10.0",
+    "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "graphql-scalars": "^1.22.4",
+    "graphql-yoga": "^5.1.1",
     "next": "13.4.10",
     "next-swagger-doc": "^0.4.0",
     "postcss": "^8.4.26",
