--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint",
     "openapi:yaml": "typeconv -f ts -t oapi --oapi-format yaml --output-extension 'swagger.yaml' --output-directory 'types/openapi' 'types/*.ts'",
     "swagger": "npm run generate && next-swagger-doc-cli next-swagger-doc.json",
-    "generate": "npx tsx ./scripts/swaggerconfig.js"
+    "generate": "tsx ./scripts/swaggerconfig.js"
   },
   "dependencies": {
     "@stoplight/elements": "^7.7.18",
