--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql-request": "^6.1.0",
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.1.1",
+    "lodash": "^4.17.21",
     "next": "13.4.10",
     "next-swagger-doc": "^0.4.0",
     "postcss": "^8.4.26",
@@ -40,6 +41,7 @@
     "viem": "^1.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-react": "^4.18.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
