--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "yarn openapi:yaml && yarn swagger",
+    "predev": "npm run openapi:yaml && npm run swagger",
     "dev": "next dev",
-    "prebuild": "yarn openapi:yaml && yarn swagger",
-    "build": "next build",
+    "build:doc": "npm run openapi:yaml && npm run swagger",
+    "build": "npm run build:doc && next build",
     "start": "next start",
     "lint": "next lint",
     "openapi:yaml": "typeconv -f ts -t oapi --oapi-format yaml --output-extension 'swagger.yaml' --output-directory 'types/openapi' 'types/*.ts'",
-    "swagger": "yarn generate && next-swagger-doc-cli next-swagger-doc.json",
-    "generate": "npx tsx ./scripts/swaggerconfig.js"
+    "swagger": "npm run generate && next-swagger-doc-cli next-swagger-doc.json",
+    "generate": "tsx ./scripts/swaggerconfig.js"
   },
   "dependencies": {
     "@stoplight/elements": "^7.7.18",
@@ -23,8 +23,12 @@
     "csv-parse": "^5.3.6",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "ethers": "^5.7.2",
+    "ethers": "^6.10.0",
+    "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "graphql-scalars": "^1.22.4",
+    "graphql-yoga": "^5.1.1",
+    "lodash": "^4.17.21",
     "next": "13.4.10",
     "next-swagger-doc": "^0.4.0",
     "postcss": "^8.4.26",
@@ -37,6 +41,7 @@
     "viem": "^1.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-react": "^4.18.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -44,7 +49,7 @@
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^3.0.0",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.7.0",
     "typeconv": "^2.3.1"
   }
 }
