--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.10",
     "next-swagger-doc": "^0.4.0",
+    "p-throttle": "^6.1.0",
     "postcss": "^8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
