feat: coingecko url change

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ALCHEMY_API_KEY=
 COIN_GECKO_API_KEY=
+COIN_GECKO_BASE_URL=https://mantle.xyz/proxy/coingecko
 NEXT_PUBLIC_UNISWAP_SUBGRAPH=
 DEBANK_ACCESSKEY=
